Extensive work on conclusion and evaluation
I have added a lot of discussion to both the evaluation and the
conclusion of the dissertation. I think it is far more balanced now and
accepts that maybe Maidsafe are merely laying the foundations for future
2.0 versions of the SAFE Network.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,19 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for David Andrew Brown at 2018-03-24 11:55:39 +0000 
+%% Created for David Andrew Brown at 2018-03-25 16:32:55 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@webpage{filecoin,
+	Date-Added = {2018-03-25 15:27:41 +0000},
+	Date-Modified = {2018-03-25 15:32:55 +0000},
+	Url = {https://filecoin.io/},
+	Year = {2018}}
+
+@webpage{safe-network-primer,
+	Date-Added = {2018-03-25 14:54:46 +0000},
+	Date-Modified = {2018-03-25 14:55:54 +0000},
+	Title = {A SAFE Network Primer},
+	Url = {https://maidsafe.net/docs/Safe%20Network%20Primer.pdf},
+	Year = {2018},
+	Bdsk-Url-1 = {https://maidsafe.net/docs/Safe%20Network%20Primer.pdf}}
+
 @webpage{hash-reccomend,
 	Date-Added = {2018-03-24 11:55:09 +0000},
 	Date-Modified = {2018-03-24 11:55:38 +0000},
 	Lastchecked = {2018-03-24},
 	Month = {2018},
-	Url = {https://www.keylength.com/en/4/}}
+	Url = {https://www.keylength.com/en/4/},
+	Bdsk-Url-1 = {https://www.keylength.com/en/4/}}
 
 @webpage{tiananmen-square,
 	Author = {Jonathan Kaiman},
@@ -301,15 +316,13 @@
 	Pages = {317--337},
 	Title = {Estimating the cost of generic quantum pre-image attacks on SHA-2 and SHA-3},
 	Year = {2016}}
-	
-@article{schaller1997moore,
-  title={Moore's law: past, present and future},
-  author={Schaller, Robert R},
-  journal={IEEE spectrum},
-  volume={34},
-  number={6},
-  pages={52--59},
-  year={1997},
-  publisher={IEEE}
-}
 
+@article{schaller1997moore,
+	Author = {Schaller, Robert R},
+	Journal = {IEEE spectrum},
+	Number = {6},
+	Pages = {52--59},
+	Publisher = {IEEE},
+	Title = {Moore's law: past, present and future},
+	Volume = {34},
+	Year = {1997}}
